# relocase

./: README.md  pyproject.toml
src/: main.py  relocase.py
tests/: e2e_test.py  test_main.py  test_relocase.py
