[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "relocase"
version = "0.1.0"
dependencies = [
    "click",
]
requires-python = ">=3.7"

[project.scripts]
relocase = "relocase:cli"

[tool.setuptools]
py-modules = ["relocase"]
package-dir = {"" = "src"}
